# media_engine_test_2

./: CMakeLists.txt  README.md
apps/duplex_ffmpeg/: main.cpp
apps/final_video/: main.cpp
apps/high_quality_video/: main.cpp
apps/realtime_video/: main.cpp
apps/receiver/: main.cpp
apps/receiver_ffmpeg/: main.cpp
apps/receiver_video/: main.cpp
apps/robust_video/: main.cpp
apps/sender/: main.cpp
apps/sender_ffmpeg/: main.cpp
apps/sender_video/: main.cpp
apps/simple_video/: main.cpp
apps/ultra_fast_video/: main.cpp
apps/video_engine/: main.cpp
apps/zero_latency/: main.cpp
include/Adaptive_UDP_Profiler/: README.md  adaptive_udp_sender.h  main.cpp  udp_port_profiler.h
include/hydra/media/: DecodedFrame.h  EncodedFrame.h  FFmpegCameraEncodingPipeline.h  FFmpegCpuPipeline.h  FFmpegDecoder.h  MediaPipeline.h  SdlRenderer.h  V4L2Enumerator.h
include/hydra/network/: NetworkReceiver.h  NetworkSender.h  Packet.h  Packetizer.h
src/: common.hpp  gpu_detect.cpp  gpu_detect.hpp  nova_engine.cpp
src/media/: FFmpegCameraEncodingPipeline.cpp  FFmpegCpuPipeline.cpp  FFmpegDecoder.cpp  SdlRenderer.cpp  V4L2Enumerator.cpp
src/network/: NetworkReceiver.cpp  NetworkSender.cpp  Packetizer.cpp
